--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Petshop</title>
 </head>
 <body>
+    <div id="pets">
+        
+    </div>
     <script src="js/petshop.js"></script>
 </body>
 </html>
